
BS_MAJOR=2
BS_MINOR=1
BS_SUB=0
SPEC_VERSION=$BS_MAJOR.$BS_MINOR.$BS_SUB
TAR_NAME="battstat_applet-"$BS_MAJOR.$BS_MINOR.$BS_SUB

AC_SUBST(SPEC_VERSION)
AC_SUBST(TAR_NAME)
AC_INIT(battstat_applet, $SPEC_VERSION,
	http://bugzilla.gnome.org/enter_bug.cgi?product=battstat_applet)
AM_CONFIG_HEADER(config.h)

dnl Might as well give it a GNOME 2.0 version number
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

AM_MAINTAINER_MODE

AC_PROG_CC
AC_ISC_POSIX
AC_HEADER_STDC
AM_PROG_LIBTOOL

AC_PROG_INTLTOOL
AC_PATH_PROG(GCONFTOOL, gconftool-2)

GCONF_CONFIG_SOURCE="xml::\${sysconfdir}/gconf/gconf.xml.defaults"
AC_SUBST(GCONF_CONFIG_SOURCE)

GNOME_COMPILE_WARNINGS
GNOME_PLATFORM_GNOME_2(yes, force)
GNOME2_X_CHECKS

LIBGNOME_REQUIRED=1.96.0
LIBGNOMEUI_REQUIRED=1.96.0
SCROLLKEEPER_REQUIRED=0.1.4
LIBGLADE_REQUIRED=1.99.5

PKG_CHECK_MODULES(BATTSTAT, gconf-2.0 libgnome-2.0 >= $LIBGNOME_REQUIRED libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED libpanelapplet-2.0 libglade-2.0 >= $LIBGLADE_REQUIRED)
AC_SUBST(BATTSTAT_CFLAGS)
AC_SUBST(BATTSTAT_LIBS)

dnl Test for Scrollkeeper

AC_PATH_PROG(SCROLLKEEPER_CONFIG, scrollkeeper-config,no)
if test x$SCROLLKEEPER_CONFIG = xno; then
  AC_MSG_ERROR(Couldn't find scrollkeeper-config, please install the scrollkeeper package)
fi

case "${host}" in
  powerpc-*-linux*)
  	HAVE_LIBAPM=no
  	AM_CONDITIONAL(HAVE_LIBAPM, test "x$HAVE_LIBAPM" = "xyes")
	AC_SUBST(HAVE_LIBAPM)
	;;
  *-*-linux*)
  	HAVE_LIBAPM=yes
  	AM_CONDITIONAL(HAVE_LIBAPM, test "x$HAVE_LIBAPM" = "xyes")
	AC_SUBST(HAVE_LIBAPM)
	AC_CHECK_LIB(apm,apm_read,,[
	AC_MSG_ERROR([*** libapm not found.])])
	LDFLAGS="$LDFLAGS $GTK_LIBS -lapm"
	;;
esac

AM_PROG_XML_I18N_TOOLS

ALL_LINGUAS="az bg da de es hu lv ms no pl pt ru sk sv uk zh_TW"

AM_GLIB_GNU_GETTEXT

# this is the directory where the *.{mo,gmo} files are installed
gnomelocaledir='${prefix}/${DATADIRNAME}/locale'
AC_SUBST(gnomelocaledir)

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

AC_DEFINE_UNQUOTED(GNOME_ICONDIR, "${GNOME_PREFIX}/share/pixmaps")

AC_OUTPUT([
Makefile
src/Makefile
apmlib/Makefile
po/Makefile.in
sounds/Makefile
docs/Makefile
docs/C/Makefile
docs/pl/Makefile
bs.spec
])


